<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/border_bottom"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/back_call"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:src="@drawable/pic_back" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fab_create_voice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"

            >

            <EditText
                android:id="@+id/title_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/title_create"
                android:lines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:gravity="center|end">

                <include layout="@layout/buttongroup_level" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date_create" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="35dp">

                <Button
                    android:id="@+id/setting_note"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/seting_note" />
            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/third">

            <Button
                android:id="@+id/voice_button"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:background="@drawable/pic_voice1" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_below="@+id/voice_button"
                android:layout_centerHorizontal="true"
                android:hint="00:00"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/time"
                android:background="@color/redred"
                android:text="@string/start_voice"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </RelativeLayout>


    </RelativeLayout>
