<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/border_bottom">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/back_calendar"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/pic_back"
                        android:layout_gravity="center"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_calender"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
            </android.support.v7.widget.Toolbar>
        </FrameLayout>

        <com.example.ting.mometest.View.SimpleCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.ting.mometest.View.SimpleCalendarView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/action_menu_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                fab:fab_addButtonColorNormal="@color/orangeRed"
                fab:fab_addButtonColorPressed="@null"
                fab:fab_addButtonPlusIconColor="@color/white"
                fab:fab_labelStyle="@style/menu_labels_style"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp">
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_note_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:borderWidth="0.0dip"
                    app:elevation="5.0dip"
                    fab:fab_colorNormal="@color/white"
                    fab:fab_title="@string/fab_create_note"
                    fab:fab_size="normal"
                    android:src="@drawable/pic_addnote"
                    fab:fab_addButtonPlusIconColor="@color/white"
                    fab:fab_colorPressed="@color/light_blue"/>
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_voice_note_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/white"
                    fab:fab_title="@string/fab_create_voice"
                    fab:fab_size="normal"
                    android:src="@drawable/pic_voicenote"
                    fab:fab_colorPressed="@color/light_blue"/>
            </com.getbase.floatingactionbutton.FloatingActionsMenu>

            <com.example.ting.mometest.View.MainScrollview
                android:id="@+id/calendar_scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_null"
                >
                <com.example.ting.mometest.View.SwipeListView
                    android:id="@+id/calendar_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/white"
                    android:dividerHeight="10dp"
                    android:background="@null"/>
            </com.example.ting.mometest.View.MainScrollview>

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>